<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/_12sdp"
    android:paddingRight="@dimen/_12sdp"
    android:paddingTop="@dimen/_10sdp"
    android:paddingBottom="@dimen/_10sdp"
    android:orientation="vertical"
    tools:context=".SettingsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_settings_back"
            android:layout_width="@dimen/_28sdp"
            android:layout_height="@dimen/_28sdp"
            android:layout_weight="0"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:padding="@dimen/_4sdp"
            android:src="@drawable/ic_back"
            app:tint="@color/fg_white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="@dimen/_8sdp"
            android:text="@string/settings_title"
            android:textSize="@dimen/_12sdp" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="@dimen/_10sdp"
        android:paddingBottom="@dimen/_10sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_background_title"
                android:textSize="@dimen/_11sdp" />

            <Button
                android:id="@+id/btn_settings_background_blank"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_weight="1"
                android:text="@string/settings_background_blank"
                android:textSize="@dimen/_9sdp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_6sdp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_settings_background_wallpaper"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/settings_background_wallpaper"
                    android:textSize="@dimen/_9sdp" />

                <Space
                    android:layout_width="@dimen/_8sdp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0" />

                <Button
                    android:id="@+id/btn_settings_background_wallpaper_dim"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/settings_background_wallpaper_dim"
                    android:textSize="@dimen/_9sdp" />

            </LinearLayout>

            <Button
                android:id="@+id/btn_settings_background_wallpaper_change"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_6sdp"
                android:layout_weight="1"
                android:text="@string/settings_background_wallpaper_change"
                android:textSize="@dimen/_9sdp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_6sdp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_settings_background_videos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/settings_background_videos"
                    android:textSize="@dimen/_9sdp" />

                <Space
                    android:layout_width="@dimen/_8sdp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0" />

                <Button
                    android:id="@+id/btn_settings_background_videos_dim"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/settings_background_videos_dim"
                    android:textSize="@dimen/_9sdp" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/settings_cuckoo_title"
                android:textSize="@dimen/_11sdp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_settings_enable_cuckoo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/settings_cuckoo_enable"
                    android:textSize="@dimen/_9sdp" />

                <Space
                    android:layout_width="@dimen/_8sdp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0" />

                <Button
                    android:id="@+id/btn_settings_disable_cuckoo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/settings_cuckoo_disable"
                    android:textSize="@dimen/_9sdp" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/settings_cuckoo_hourly_title"
                android:textSize="@dimen/_11sdp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/settings_cuckoo_hourly_time_0"
                    android:textSize="@dimen/_11sdp" />

                <CheckBox
                    android:id="@+id/cb_settings_hour_0"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_32sdp"
                    android:layout_weight="1"
                    android:background="?android:attr/listChoiceIndicatorMultiple"
                    android:button="@null"
                    android:checked="true" />

                <CheckBox
                    android:id="@+id/cb_settings_hour_1"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_32sdp"
                    android:layout_weight="1"
                    android:background="?android:attr/listChoiceIndicatorMultiple"
                    android:button="@null"
                    android:checked="true" />

                <CheckBox
                    android:id="@+id/cb_settings_hour_2"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_32sdp"
                    android:layout_weight="1"
                    android:background="?android:attr/listChoiceIndicatorMultiple"
                    android:button="@null"
                    android:checked="true" />

                <CheckBox
                    android:id="@+id/cb_settings_hour_3"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_32sdp"
                    android:layout_weight="1"
                    android:background="?android:attr/listChoiceIndicatorMultiple"
                    android:button="@null"
                    android:checked="true" />

                <CheckBox
                    android:id="@+id/cb_settings_hour_4"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_32sdp"
                    android:layout_weight="1"
                    android:background="?android:attr/listChoiceIndicatorMultiple"
                    android:button="@null"
                    android:checked="true" />

                <CheckBox
                    android:id="@+id/cb_settings_hour_5"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_32sdp"
                    android:layout_weight="1"
                    android:background="?android:attr/listChoiceIndicatorMultiple"
                    android:button="@null"
                    android:checked="true" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/settings_cuckoo_hourly_time_1"
                    android:textSize="@dimen/_11sdp" />

                <CheckBox
                    android:id="@+id/cb_settings_hour_6"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_32sdp"
                    android:layout_weight="1"
                    android:background="?android:attr/listChoiceIndicatorMultiple"
                    android:button="@null"
                    android:checked="true" />

                <CheckBox
                    android:id="@+id/cb_settings_hour_7"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_32sdp"
                    android:layout_weight="1"
                    android:background="?android:attr/listChoiceIndicatorMultiple"
                    android:button="@null"
                    android:checked="true" />

                <CheckBox
                    android:id="@+id/cb_settings_hour_8"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_32sdp"
                    android:layout_weight="1"
                    android:background="?android:attr/listChoiceIndicatorMultiple"
                    android:button="@null"
                    android:checked="true" />

                <CheckBox
                    android:id="@+id/cb_settings_hour_9"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_32sdp"
                    android:layout_weight="1"
                    android:background="?android:attr/listChoiceIndicatorMultiple"
                    android:button="@null"
                    android:checked="true" />

                <CheckBox
                    android:id="@+id/cb_settings_hour_10"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_32sdp"
                    android:layout_weight="1"
                    android:background="?android:attr/listChoiceIndicatorMultiple"
                    android:button="@null"
                    android:checked="true" />

                <CheckBox
                    android:id="@+id/cb_settings_hour_11"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_32sdp"
                    android:layout_weight="1"
                    android:background="?android:attr/listChoiceIndicatorMultiple"
                    android:button="@null"
                    android:checked="true" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/settings_cuckoo_hourly_time_2"
                    android:textSize="@dimen/_11sdp" />

                <CheckBox
                    android:id="@+id/cb_settings_hour_12"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_32sdp"
                    android:layout_weight="1"
                    android:background="?android:attr/listChoiceIndicatorMultiple"
                    android:button="@null"
                    android:checked="true" />

                <CheckBox
                    android:id="@+id/cb_settings_hour_13"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_32sdp"
                    android:layout_weight="1"
                    android:background="?android:attr/listChoiceIndicatorMultiple"
                    android:button="@null"
                    android:checked="true" />

                <CheckBox
                    android:id="@+id/cb_settings_hour_14"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_32sdp"
                    android:layout_weight="1"
                    android:background="?android:attr/listChoiceIndicatorMultiple"
                    android:button="@null"
                    android:checked="true" />

                <CheckBox
                    android:id="@+id/cb_settings_hour_15"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_32sdp"
                    android:layout_weight="1"
                    android:background="?android:attr/listChoiceIndicatorMultiple"
                    android:button="@null"
                    android:checked="true" />

                <CheckBox
                    android:id="@+id/cb_settings_hour_16"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_32sdp"
                    android:layout_weight="1"
                    android:background="?android:attr/listChoiceIndicatorMultiple"
                    android:button="@null"
                    android:checked="true" />

                <CheckBox
                    android:id="@+id/cb_settings_hour_17"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_32sdp"
                    android:layout_weight="1"
                    android:background="?android:attr/listChoiceIndicatorMultiple"
                    android:button="@null"
                    android:checked="true" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/settings_cuckoo_hourly_time_3"
                    android:textSize="@dimen/_11sdp" />

                <CheckBox
                    android:id="@+id/cb_settings_hour_18"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_32sdp"
                    android:layout_weight="1"
                    android:background="?android:attr/listChoiceIndicatorMultiple"
                    android:button="@null"
                    android:checked="true" />

                <CheckBox
                    android:id="@+id/cb_settings_hour_19"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_32sdp"
                    android:layout_weight="1"
                    android:background="?android:attr/listChoiceIndicatorMultiple"
                    android:button="@null"
                    android:checked="true" />

                <CheckBox
                    android:id="@+id/cb_settings_hour_20"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_32sdp"
                    android:layout_weight="1"
                    android:background="?android:attr/listChoiceIndicatorMultiple"
                    android:button="@null"
                    android:checked="true" />

                <CheckBox
                    android:id="@+id/cb_settings_hour_21"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_32sdp"
                    android:layout_weight="1"
                    android:background="?android:attr/listChoiceIndicatorMultiple"
                    android:button="@null"
                    android:checked="true" />

                <CheckBox
                    android:id="@+id/cb_settings_hour_22"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_32sdp"
                    android:layout_weight="1"
                    android:background="?android:attr/listChoiceIndicatorMultiple"
                    android:button="@null"
                    android:checked="true" />

                <CheckBox
                    android:id="@+id/cb_settings_hour_23"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_32sdp"
                    android:layout_weight="1"
                    android:background="?android:attr/listChoiceIndicatorMultiple"
                    android:button="@null"
                    android:checked="true" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>